--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/spanish-paella.html">Spanish Paella</a>
     </body>
 </html>
