Add link to index.html

--- a/recipes/spanish-paella.html
+++ b/recipes/spanish-paella.html
@@ -6,6 +6,7 @@
         <title>Spanish Paella</title>
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Spanish Paella</h1>
     </body>
 </html>
