--- a/recipes/spanish-paella.html
+++ b/recipes/spanish-paella.html
@@ -8,5 +8,9 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Spanish Paella</h1>
+        <img src="../img/paella.webp" alt="Paella">
+        <h2>Description</h2>
+        <p>A very traditional Spanish paella, garnished with Spanish chorizo, chicken, squid, mussels, shrimp, and peas. A paella pan is recommended for making and serving this dish.</p>
+        
     </body>
 </html>
