--- a/recipes/spanish-paella.html
+++ b/recipes/spanish-paella.html
@@ -11,6 +11,28 @@
         <img src="../img/paella.webp" alt="Paella">
         <h2>Description</h2>
         <p>A very traditional Spanish paella, garnished with Spanish chorizo, chicken, squid, mussels, shrimp, and peas. A paella pan is recommended for making and serving this dish.</p>
-        
+        <h2>Ingredients</h2>
+        <ul>
+            <li>4 tablespoons olive oil</li>
+            <li>1 onion, chopped</li>
+            <li>2 cloves garlic, minced</li>
+            <li>1 red bell pepper, chopped</li>
+            <li>4 ounces Spanish chorizo, casing discarded and cut into 1/4-inch dice</li>
+            <li>2 skinless, boneless chicken breast halves - cut into 1-inch cubes</li>
+            <li>1 (12 ounce) package uncooked Arborio rice</li>
+            <li>5 cups chicken broth</li>
+            <li>½ cup white wine</li>
+            <li>1 sprig fresh thyme</li>
+            <li>1 pinch saffron</li>
+            <li>salt to taste</li>
+            <li>ground black pepper to taste</li>
+            <li>2 squid, cleaned and cut into 1-inch pieces</li>
+            <li>2 tomatoes, seeded and chopped</li>
+            <li>½ cup frozen green peas</li>
+            <li>12 large shrimp, peeled and deveined</li>
+            <li>1 pound mussels, cleaned and debearded</li>
+            <li>¼ cup chopped Italian flat leaf parsley</li>
+            <li>8 slices lemon, for garnish</li>
+        </ul>
     </body>
 </html>
