Added links to all the existing recipes in index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/spanish-paella.html">Spanish Paella</a>
+        <a href="recipes/bocapizza.html">Bocapizza</a>
+        <a href="recipes/durum.html">Durum Kebab</a>
     </body>
 </html>
