--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="styles.css">
         <meta charset="utf-8">
         <title>Odin Recipes Project</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/spanish-paella.html">Spanish Paella</a>
-        <a href="recipes/bocapizza.html">Bocapizza</a>
-        <a href="recipes/durum.html">Durum Kebab</a>
+        <div class="page zen">
+            <h1>Odin Recipes</h1>
+            <a href="recipes/spanish-paella.html">Spanish Paella</a>
+            <a href="recipes/bocapizza.html">Bocapizza</a>
+            <a href="recipes/durum.html">Durum Kebab</a>
+        </div>
+        
     </body>
 </html>
