--- a/recipes/bocapizza.html
+++ b/recipes/bocapizza.html
@@ -2,32 +2,35 @@
 
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="../styles.css">
         <meta charset="utf-8">
         <title>Bocapizza</title>
     </head>
     <body>
-        <a href="../index.html">Home</a>
-        <h1>Bocapizza</h1>
-        <img src="../img/bocapizza.webp" alt="Bocapizza">
-        <h2>Description</h2>
-        <p>The term "bocapizza" refers to a popular Spanish dish that combines elements of a sandwich and a pizza. It consists of a baguette-style bread topped with tomato sauce, melted cheese, and various ingredients such as meats, vegetables, or condiments. After assembling, it's baked until the cheese is melted and the bread is crispy. This dish is often enjoyed as a quick meal, snack, or party food.</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>Bread (good bread not sandwich shit)</li>
-            <li>Fried tomato sauce</li>
-            <li>Cheese (preferably meltable)</li>
-            <li>Cooked ham</li>
-            <li>Oregano</li>
-        </ul>
-        <h2>Steps</h2>
-        <ol>
-            <li>Cut bread in half</li>
-            <li>Spread fried tomato sauce in bread</li>
-            <li>Add cheese</li>
-            <li>Add cooked Ham</li>
-            <li>Add oregano</li>
-            <li>Put the combination in the oven, 210º and 10 minutes</li>
-            <li>Enjoy your bocapizza</li>
-        </ol>
+        <div class="page">
+            <a href="../index.html" class="home">Home</a>
+            <h1>Bocapizza</h1>
+            <img src="../img/bocapizza.webp" alt="Bocapizza">
+            <h2>Description</h2>
+            <p>The term "bocapizza" refers to a popular Spanish dish that combines elements of a sandwich and a pizza. It consists of a baguette-style bread topped with tomato sauce, melted cheese, and various ingredients such as meats, vegetables, or condiments. After assembling, it's baked until the cheese is melted and the bread is crispy. This dish is often enjoyed as a quick meal, snack, or party food.</p>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>Bread (good bread not sandwich shit)</li>
+                <li>Fried tomato sauce</li>
+                <li>Cheese (preferably meltable)</li>
+                <li>Cooked ham</li>
+                <li>Oregano</li>
+            </ul>
+            <h2>Steps</h2>
+            <ol>
+                <li>Cut bread in half</li>
+                <li>Spread fried tomato sauce in bread</li>
+                <li>Add cheese</li>
+                <li>Add cooked Ham</li>
+                <li>Add oregano</li>
+                <li>Put the combination in the oven, 210º and 10 minutes</li>
+                <li>Enjoy your bocapizza</li>
+            </ol>
+        </div>
     </body>
 </html>
